[gd_scene load_steps=60 format=3 uid="uid://wykfxsnp2rhk"]

[ext_resource type="Script" uid="uid://cr05fk0jwmi00" path="res://main_menu.gd" id="1_fu7sn"]
[ext_resource type="Texture2D" uid="uid://bo2sa6mu3dose" path="res://Imagenes/Portada2-removebg-preview.png" id="3_glbon"]
[ext_resource type="Texture2D" uid="uid://pif6lmh3m8fg" path="res://Imagenes/titulo-0000.jpg" id="4_8qtwp"]
[ext_resource type="Theme" uid="uid://cb2tqos08yhkd" path="res://assets/MinimalUI/MinimalUI.tres" id="4_jix8l"]
[ext_resource type="VideoStream" uid="uid://bl8du4g156jkl" path="res://assets/videos/VideoIntro.ogv" id="5_glbon"]
[ext_resource type="FontFile" uid="uid://dsisvfrdgqau" path="res://assets/Cubic_11_1.013_R.ttf" id="6_8qtwp"]
[ext_resource type="AudioStream" uid="uid://2t3lq8staurd" path="res://assets/audio/Ludum Dare 30 - 07.ogg" id="6_nlkkf"]
[ext_resource type="Texture2D" uid="uid://6pnkpupuhda" path="res://assets/MinimalUI/icons.svg" id="7_dy7ct"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dy7ct"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.282353, 0.282353, 0.282353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0o4t1"]
bg_color = Color(0.145098, 0.145098, 0.145098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0k4wn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j5v2v"]
bg_color = Color(0.129412, 0.129412, 0.129412, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_iotk1"]
atlas = ExtResource("7_dy7ct")
region = Rect2(37, 111, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_w44g7"]
atlas = ExtResource("7_dy7ct")
region = Rect2(85, 111, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_cm266"]
atlas = ExtResource("7_dy7ct")
region = Rect2(61, 111, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8g3n"]
atlas = ExtResource("7_dy7ct")
region = Rect2(13, 111, 18, 18)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8u0te"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oiatc"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_mg3m2"]
atlas = ExtResource("7_dy7ct")
region = Rect2(13, 79, 34, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojb7r"]
atlas = ExtResource("7_dy7ct")
region = Rect2(93, 79, 34, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5qqf"]
atlas = ExtResource("7_dy7ct")
region = Rect2(53, 79, 34, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bbuq"]
atlas = ExtResource("7_dy7ct")
region = Rect2(133, 79, 34, 19)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_saq78"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8uw0o"]
bg_color = Color(0.129412, 0.129412, 0.129412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ql5ya"]
bg_color = Color(0.129412, 0.129412, 0.129412, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ka3nr"]
bg_color = Color(0.282353, 0.282353, 0.282353, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_48knj"]
content_margin_top = 7.0
content_margin_bottom = 7.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.129412, 0.129412, 0.129412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m2y5l"]
content_margin_top = 7.0
content_margin_bottom = 7.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.282353, 0.282353, 0.282353, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_imjy1"]
color = Color(0.282353, 0.282353, 0.282353, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5051"]
atlas = ExtResource("7_dy7ct")
region = Rect2(80, 10, 12, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2sba"]
atlas = ExtResource("7_dy7ct")
region = Rect2(112, 10, 12, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ai24q"]
atlas = ExtResource("7_dy7ct")
region = Rect2(144, 10, 12, 28)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qby1g"]
bg_color = Color(0.282353, 0.282353, 0.282353, 1)
corner_radius_top_left = 2
corner_radius_bottom_left = 2
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_04soa"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_bottom_left = 2
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u6vjd"]
bg_color = Color(0.129412, 0.129412, 0.129412, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_swr0i"]
bg_color = Color(0.129412, 0.129412, 0.129412, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2urq5"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.282353, 0.282353, 0.282353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ix6bv"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.129412, 0.129412, 0.129412, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.282353, 0.282353, 0.282353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2kjvi"]
bg_color = Color(0.145098, 0.145098, 0.145098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kvjq3"]
bg_color = Color(0.282353, 0.282353, 0.282353, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_h1gbt"]
color = Color(0.282353, 0.282353, 0.282353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_km3bq"]
content_margin_left = 7.0
content_margin_top = 7.0
content_margin_right = 7.0
content_margin_bottom = 7.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.282353, 0.282353, 0.282353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7r7u4"]
bg_color = Color(0.129412, 0.129412, 0.129412, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.282353, 0.282353, 0.282353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gqv7n"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hkf1x"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 2.0
bg_color = Color(0.282353, 0.282353, 0.282353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e64eg"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.129412, 0.129412, 0.129412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wh67g"]
content_margin_left = 10.0
content_margin_top = 0.0
content_margin_right = 10.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color(0.282353, 0.282353, 0.282353, 1)
expand_margin_top = 2.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v2pes"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.282353, 0.282353, 0.282353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cy76q"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.282353, 0.282353, 0.282353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w3tfb"]
content_margin_left = 7.0
content_margin_right = 7.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.129412, 0.129412, 0.129412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dfeea"]
content_margin_left = 7.0
content_margin_right = 7.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.282353, 0.282353, 0.282353, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_kojkm"]
color = Color(0.282353, 0.282353, 0.282353, 1)
vertical = true

[sub_resource type="AtlasTexture" id="AtlasTexture_m3v73"]
atlas = ExtResource("7_dy7ct")
region = Rect2(74, 52, 24, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivaxt"]
atlas = ExtResource("7_dy7ct")
region = Rect2(106, 52, 24, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ia58x"]
atlas = ExtResource("7_dy7ct")
region = Rect2(138, 52, 24, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f6p64"]
content_margin_left = 2.0
content_margin_top = 0.0
content_margin_right = 2.0
content_margin_bottom = 0.0
bg_color = Color(0.282353, 0.282353, 0.282353, 1)
corner_radius_top_left = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1gtdl"]
content_margin_left = 2.0
content_margin_top = 0.0
content_margin_right = 2.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nbjkp"]
content_margin_left = 2.0
content_margin_top = 0.0
content_margin_right = 2.0
content_margin_bottom = 0.0
bg_color = Color(0.129412, 0.129412, 0.129412, 1)
corner_radius_top_left = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="Theme" id="Theme_0o4t1"]
default_font = ExtResource("6_8qtwp")
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_color_disabled = Color(0.9, 0.9, 0.9, 0.2)
Button/colors/font_color_hover = Color(0.94, 0.94, 0.94, 1)
Button/colors/font_color_pressed = Color(1, 1, 1, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(1, 1, 1, 1)
Button/colors/font_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 0.4)
Button/colors/icon_focus_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_normal_color = Color(1, 1, 1, 1)
Button/colors/icon_pressed_color = Color(1, 1, 1, 1)
Button/constants/h_separation = 4
Button/constants/hseparation = 2
Button/constants/icon_max_width = 0
Button/constants/outline_size = 0
Button/font_sizes/font_size = 16
Button/fonts/font = ExtResource("6_8qtwp")
Button/styles/disabled = SubResource("StyleBoxFlat_dy7ct")
Button/styles/focus = SubResource("StyleBoxFlat_0o4t1")
Button/styles/hover = SubResource("StyleBoxFlat_0k4wn")
Button/styles/normal = SubResource("StyleBoxFlat_dy7ct")
Button/styles/pressed = SubResource("StyleBoxFlat_j5v2v")
CheckBox/colors/font_color = Color(0.88, 0.88, 0.88, 1)
CheckBox/colors/font_color_disabled = Color(0.9, 0.9, 0.9, 0.2)
CheckBox/colors/font_color_hover = Color(0.94, 0.94, 0.94, 1)
CheckBox/colors/font_color_hover_pressed = Color(1, 1, 1, 1)
CheckBox/colors/font_color_pressed = Color(1, 1, 1, 1)
CheckBox/constants/check_vadjust = 0
CheckBox/constants/hseparation = 4
CheckBox/font_sizes/font_size = 20
CheckBox/fonts/font = ExtResource("6_8qtwp")
CheckBox/icons/checked = SubResource("AtlasTexture_iotk1")
CheckBox/icons/radio_checked = SubResource("AtlasTexture_w44g7")
CheckBox/icons/radio_unchecked = SubResource("AtlasTexture_cm266")
CheckBox/icons/unchecked = SubResource("AtlasTexture_g8g3n")
CheckBox/styles/disabled = SubResource("StyleBoxEmpty_8u0te")
CheckBox/styles/focus = SubResource("StyleBoxFlat_oiatc")
CheckBox/styles/hover = SubResource("StyleBoxEmpty_8u0te")
CheckBox/styles/hover_pressed = SubResource("StyleBoxEmpty_8u0te")
CheckBox/styles/normal = SubResource("StyleBoxEmpty_8u0te")
CheckBox/styles/pressed = SubResource("StyleBoxEmpty_8u0te")
CheckButton/colors/font_color = Color(0.88, 0.88, 0.88, 1)
CheckButton/colors/font_color_disabled = Color(0.9, 0.9, 0.9, 0.2)
CheckButton/colors/font_color_hover = Color(0.94, 0.94, 0.94, 1)
CheckButton/colors/font_color_hover_pressed = Color(1, 1, 1, 1)
CheckButton/colors/font_color_pressed = Color(1, 1, 1, 1)
CheckButton/constants/check_vadjust = 0
CheckButton/constants/hseparation = 4
CheckButton/fonts/font = ExtResource("6_8qtwp")
CheckButton/icons/off = SubResource("AtlasTexture_mg3m2")
CheckButton/icons/off_disabled = SubResource("AtlasTexture_ojb7r")
CheckButton/icons/on = SubResource("AtlasTexture_e5qqf")
CheckButton/icons/on_disabled = SubResource("AtlasTexture_7bbuq")
CheckButton/styles/disabled = SubResource("StyleBoxEmpty_saq78")
CheckButton/styles/focus = null
CheckButton/styles/hover = SubResource("StyleBoxEmpty_saq78")
CheckButton/styles/hover_pressed = SubResource("StyleBoxEmpty_saq78")
CheckButton/styles/normal = SubResource("StyleBoxEmpty_saq78")
CheckButton/styles/pressed = SubResource("StyleBoxEmpty_saq78")
HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_highlight = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_highlight = null
HScrollBar/styles/grabber = SubResource("StyleBoxFlat_8uw0o")
HScrollBar/styles/grabber_highlight = SubResource("StyleBoxFlat_ql5ya")
HScrollBar/styles/grabber_pressed = SubResource("StyleBoxFlat_ka3nr")
HScrollBar/styles/scroll = SubResource("StyleBoxFlat_48knj")
HScrollBar/styles/scroll_focus = SubResource("StyleBoxFlat_m2y5l")
HSeparator/constants/separation = 4
HSeparator/styles/separator = SubResource("StyleBoxLine_imjy1")
HSlider/icons/grabber = SubResource("AtlasTexture_u5051")
HSlider/icons/grabber_disabled = SubResource("AtlasTexture_v2sba")
HSlider/icons/grabber_highlight = SubResource("AtlasTexture_ai24q")
HSlider/icons/tick = null
HSlider/styles/grabber_area = SubResource("StyleBoxFlat_qby1g")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxFlat_04soa")
HSlider/styles/slider = SubResource("StyleBoxFlat_u6vjd")
LineEdit/colors/clear_button_color = Color(0.88, 0.88, 0.88, 1)
LineEdit/colors/clear_button_color_pressed = Color(1, 1, 1, 1)
LineEdit/colors/cursor_color = Color(0.94, 0.94, 0.94, 1)
LineEdit/colors/font_color = Color(0.88, 0.88, 0.88, 1)
LineEdit/colors/font_color_selected = Color(1, 1, 1, 1)
LineEdit/colors/font_color_uneditable = Color(0.88, 0.88, 0.88, 0.5)
LineEdit/colors/selection_color = Color(0.282353, 0.282353, 0.282353, 1)
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = ExtResource("6_8qtwp")
LineEdit/icons/clear = null
LineEdit/styles/focus = SubResource("StyleBoxFlat_swr0i")
LineEdit/styles/normal = SubResource("StyleBoxFlat_2urq5")
LineEdit/styles/read_only = SubResource("StyleBoxFlat_ix6bv")
OptionButton/styles/focus = SubResource("StyleBoxFlat_2kjvi")
Panel/styles/panel = SubResource("StyleBoxFlat_dy7ct")
PopupMenu/colors/font_color = Color(0.88, 0.88, 0.88, 1)
PopupMenu/colors/font_color_accel = Color(0.7, 0.7, 0.7, 0.8)
PopupMenu/colors/font_color_disabled = Color(0.4, 0.4, 0.4, 0.8)
PopupMenu/colors/font_color_hover = Color(0.88, 0.88, 0.88, 1)
PopupMenu/colors/font_color_separator = Color(0.88, 0.88, 0.88, 1)
PopupMenu/constants/hseparation = 4
PopupMenu/constants/vseparation = 4
PopupMenu/fonts/font = ExtResource("6_8qtwp")
PopupMenu/icons/checked = SubResource("AtlasTexture_iotk1")
PopupMenu/icons/radio_checked = SubResource("AtlasTexture_w44g7")
PopupMenu/icons/radio_unchecked = SubResource("AtlasTexture_cm266")
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = SubResource("AtlasTexture_g8g3n")
PopupMenu/styles/hover = SubResource("StyleBoxFlat_kvjq3")
PopupMenu/styles/labeled_separator_left = SubResource("StyleBoxLine_h1gbt")
PopupMenu/styles/labeled_separator_right = SubResource("StyleBoxLine_h1gbt")
PopupMenu/styles/panel = SubResource("StyleBoxFlat_km3bq")
PopupMenu/styles/panel_disabled = SubResource("StyleBoxFlat_7r7u4")
PopupMenu/styles/separator = SubResource("StyleBoxLine_h1gbt")
ProgressBar/colors/font_color = Color(0.94, 0.94, 0.94, 1)
ProgressBar/colors/font_color_shadow = Color(0, 0, 0, 1)
ProgressBar/fonts/font = ExtResource("6_8qtwp")
ProgressBar/styles/bg = SubResource("StyleBoxFlat_gqv7n")
ProgressBar/styles/fg = SubResource("StyleBoxFlat_hkf1x")
TabContainer/colors/font_color_bg = Color(0.69, 0.69, 0.69, 1)
TabContainer/colors/font_color_disabled = Color(0.9, 0.9, 0.9, 0.2)
TabContainer/colors/font_color_fg = Color(0.94, 0.94, 0.94, 1)
TabContainer/constants/hseparation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 8
TabContainer/constants/top_margin = 24
TabContainer/fonts/font = ExtResource("6_8qtwp")
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = SubResource("StyleBoxFlat_dy7ct")
TabContainer/styles/tab_bg = SubResource("StyleBoxFlat_e64eg")
TabContainer/styles/tab_disabled = SubResource("StyleBoxFlat_e64eg")
TabContainer/styles/tab_fg = SubResource("StyleBoxFlat_wh67g")
TextEdit/colors/background_color = Color(0, 0, 0, 0)
TextEdit/colors/bookmark_color = Color(0.08, 0.49, 0.98, 1)
TextEdit/colors/brace_mismatch_color = Color(1, 0.2, 0.2, 1)
TextEdit/colors/breakpoint_color = Color(0.8, 0.8, 0.4, 0.2)
TextEdit/colors/caret_background_color = Color(0, 0, 0, 1)
TextEdit/colors/caret_color = Color(0.88, 0.88, 0.88, 1)
TextEdit/colors/code_folding_color = Color(0.8, 0.8, 0.8, 0.8)
TextEdit/colors/completion_background_color = Color(0.17, 0.16, 0.2, 1)
TextEdit/colors/completion_existing_color = Color(0.87, 0.87, 0.87, 0.13)
TextEdit/colors/completion_font_color = Color(0.67, 0.67, 0.67, 1)
TextEdit/colors/completion_scroll_color = Color(1, 1, 1, 1)
TextEdit/colors/completion_selected_color = Color(0.26, 0.26, 0.27, 1)
TextEdit/colors/current_line_color = Color(0.25, 0.25, 0.26, 0.8)
TextEdit/colors/executing_line_color = Color(0.2, 0.8, 0.2, 0.4)
TextEdit/colors/font_color = Color(0.88, 0.88, 0.88, 1)
TextEdit/colors/font_color_readonly = Color(0.88, 0.88, 0.88, 0.5)
TextEdit/colors/font_color_selected = Color(0, 0, 0, 1)
TextEdit/colors/function_color = Color(0.4, 0.64, 0.81, 1)
TextEdit/colors/line_number_color = Color(0.67, 0.67, 0.67, 0.4)
TextEdit/colors/mark_color = Color(1, 0.4, 0.4, 0.4)
TextEdit/colors/member_variable_color = Color(0.9, 0.31, 0.35, 1)
TextEdit/colors/number_color = Color(0.92, 0.58, 0.2, 1)
TextEdit/colors/safe_line_number_color = Color(0.67, 0.78, 0.67, 0.6)
TextEdit/colors/selection_color = Color(0.282353, 0.282353, 0.282353, 1)
TextEdit/colors/symbol_color = Color(0.94, 0.94, 0.94, 1)
TextEdit/colors/word_highlighted_color = Color(0.8, 0.9, 0.9, 0.15)
TextEdit/constants/completion_lines = 7
TextEdit/constants/completion_max_width = 50
TextEdit/constants/completion_scroll_width = 3
TextEdit/constants/line_spacing = 4
TextEdit/fonts/font = ExtResource("6_8qtwp")
TextEdit/icons/fold = null
TextEdit/icons/folded = null
TextEdit/icons/space = null
TextEdit/icons/tab = null
TextEdit/styles/completion = null
TextEdit/styles/focus = SubResource("StyleBoxFlat_swr0i")
TextEdit/styles/normal = SubResource("StyleBoxFlat_v2pes")
TextEdit/styles/read_only = SubResource("StyleBoxFlat_ix6bv")
Tree/colors/custom_button_font_highlight = Color(0.94, 0.94, 0.94, 1)
Tree/colors/drop_position_color = Color(1, 0.3, 0.2, 1)
Tree/colors/font_color = Color(0.69, 0.69, 0.69, 1)
Tree/colors/font_color_selected = Color(1, 1, 1, 1)
Tree/colors/guide_color = Color(0, 0, 0, 0.1)
Tree/colors/relationship_line_color = Color(0.27, 0.27, 0.27, 1)
Tree/colors/title_button_color = Color(0.88, 0.88, 0.88, 1)
Tree/constants/button_margin = 4
Tree/constants/draw_guides = 1
Tree/constants/draw_relationship_lines = 0
Tree/constants/hseparation = 4
Tree/constants/item_margin = 12
Tree/constants/scroll_border = 4
Tree/constants/scroll_speed = 12
Tree/constants/vseparation = 4
Tree/fonts/font = ExtResource("6_8qtwp")
Tree/fonts/title_button_font = ExtResource("6_8qtwp")
Tree/icons/arrow = null
Tree/icons/arrow_collapsed = null
Tree/icons/checked = SubResource("AtlasTexture_iotk1")
Tree/icons/select_arrow = null
Tree/icons/unchecked = SubResource("AtlasTexture_g8g3n")
Tree/icons/updown = null
Tree/styles/bg = SubResource("StyleBoxFlat_dy7ct")
Tree/styles/bg_focus = null
Tree/styles/button_pressed = null
Tree/styles/cursor = null
Tree/styles/cursor_unfocused = null
Tree/styles/custom_button = null
Tree/styles/custom_button_hover = null
Tree/styles/custom_button_pressed = null
Tree/styles/selected = SubResource("StyleBoxFlat_cy76q")
Tree/styles/selected_focus = SubResource("StyleBoxFlat_cy76q")
Tree/styles/title_button_hover = null
Tree/styles/title_button_normal = null
Tree/styles/title_button_pressed = null
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource("StyleBoxFlat_8uw0o")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxFlat_ql5ya")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxFlat_ka3nr")
VScrollBar/styles/scroll = SubResource("StyleBoxFlat_w3tfb")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxFlat_dfeea")
VSeparator/constants/separation = 4
VSeparator/styles/separator = SubResource("StyleBoxLine_kojkm")
VSlider/icons/grabber = SubResource("AtlasTexture_m3v73")
VSlider/icons/grabber_disabled = SubResource("AtlasTexture_ivaxt")
VSlider/icons/grabber_highlight = SubResource("AtlasTexture_ia58x")
VSlider/icons/tick = null
VSlider/styles/grabber_area = SubResource("StyleBoxFlat_f6p64")
VSlider/styles/grabber_area_highlight = SubResource("StyleBoxFlat_1gtdl")
VSlider/styles/slider = SubResource("StyleBoxFlat_nbjkp")

[node name="MainMenu" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainMenu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 913.0
offset_bottom = 689.0
script = ExtResource("1_fu7sn")
intro_video = ExtResource("5_glbon")

[node name="MenuMusic" type="AudioStreamPlayer" parent="UI/MainMenu"]
stream = ExtResource("6_nlkkf")
autoplay = true

[node name="ImagenFondo" type="Sprite2D" parent="UI/MainMenu"]
position = Vector2(456.957, 343.574)
scale = Vector2(7.12567, 5.38165)
texture = ExtResource("4_8qtwp")

[node name="ColorRect" type="ColorRect" parent="UI/MainMenu"]
layout_mode = 0
offset_left = 61.0
offset_top = 512.0
offset_right = 189.0
offset_bottom = 659.0
color = Color(0, 0, 0, 1)

[node name="ImagenPersonaje" type="Sprite2D" parent="UI/MainMenu"]
position = Vector2(127, 579)
scale = Vector2(1.58, 1.519)
texture = ExtResource("3_glbon")

[node name="Creditos" type="Label" parent="UI/MainMenu"]
layout_mode = 0
offset_left = 756.0
offset_top = 570.0
offset_right = 1157.0
offset_bottom = 688.0
theme = SubResource("Theme_0o4t1")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 17
text = "Realizado por:
Lucas Ottonello
Carlos Gil
Felipe Camejo"

[node name="VideoPlayer" type="VideoStreamPlayer" parent="UI/MainMenu"]
layout_mode = 2
offset_left = 1.0
offset_right = 917.0
offset_bottom = 685.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("5_glbon")
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainMenu"]
layout_mode = 0
offset_left = 2.0
offset_top = 557.0
offset_right = 915.0
offset_bottom = 687.0

[node name="Jugar" type="Button" parent="UI/MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Salir")
theme = ExtResource("4_jix8l")
theme_override_font_sizes/font_size = 24
text = "Jugar"

[node name="Salir" type="Button" parent="UI/MainMenu/VBoxContainer"]
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath(".")
focus_neighbor_bottom = NodePath("../Jugar")
theme = ExtResource("4_jix8l")
theme_override_font_sizes/font_size = 24
text = "Salir"

[connection signal="finished" from="UI/MainMenu/VideoPlayer" to="UI/MainMenu" method="_on_video_finished"]
[connection signal="pressed" from="UI/MainMenu/VBoxContainer/Jugar" to="UI/MainMenu" method="_on_jugar_pressed"]
[connection signal="pressed" from="UI/MainMenu/VBoxContainer/Salir" to="UI/MainMenu" method="_on_salir_pressed"]
